--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </address>
       </div>
     </header>
-    <!-- Header -->
+    <!-- /Header -->
 
     <main>
       <!-- Hero Section -->
@@ -89,7 +89,7 @@
           </button>
         </div>
       </section>
-      <!-- Hero Section -->
+      <!-- /Hero Section -->
 
       <!-- Features section -->
       <section class="features-section">
@@ -176,7 +176,7 @@
           </ul>
         </div>
       </section>
-      <!-- Features section -->
+      <!-- /Features section -->
 
       <!-- Our Team Section -->
       <section class="team-section">
@@ -205,8 +205,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -218,8 +219,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-twitter"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -231,8 +233,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-facebook"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -244,8 +247,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -272,8 +276,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -285,8 +290,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-twitter"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -298,8 +304,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-facebook"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -311,8 +318,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -339,8 +347,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -352,8 +361,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-twitter"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -365,8 +375,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-facebook"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -378,8 +389,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -406,8 +418,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-instagram"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -419,8 +432,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-twitter"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -432,8 +446,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-facebook"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-messenger">
                     <a href="" class="link-team-messenger"
@@ -445,8 +460,9 @@
                       >
                         <use
                           href="./images/icons.svg#icon-linkedin"
-                        ></use></svg
-                    ></a>
+                        ></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -454,7 +470,7 @@
           </ul>
         </div>
       </section>
-      <!-- Our Team Section -->
+      <!-- /Our Team Section -->
 
       <!-- Portfolio Section -->
       <section class="portfolio-section">
@@ -593,7 +609,7 @@
           </ul>
         </div>
       </section>
-      <!-- Portfolio Section -->
+      <!-- /Portfolio Section -->
     </main>
 
     <!-- Footer -->
@@ -652,8 +668,9 @@
                 >
                   <use
                     href="./images/icons.svg#icon-facebook"
-                  ></use></svg
-              ></a>
+                  ></use>
+                </svg>
+              </a>
             </li>
             <li class="list-messenger-footer">
               <a href="#" class="link-footer-messenger"
@@ -665,13 +682,174 @@
                 >
                   <use
                     href="./images/icons.svg#icon-linkedin"
-                  ></use></svg
-              ></a>
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
+        <div class="footer-form-section">
+          <p class="footer-form-text">Subscribe</p>
+          <form class="footer-form">
+            <label class="footer-form-label">
+              <input
+                class="footer-input-form"
+                type="text"
+                name="user_mail"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn-footer-form" type="submit">
+              Subscribe
+              <svg>
+                <use
+                  href="./images/icons.svg#icon-icon-send"
+                  width="24"
+                  height="20"
+                  aria-label="send icon"
+                ></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
-    <!-- Footer -->
+    <!-- /Footer -->
+
+    <!-- Backdrop -->
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-btn" type="button">
+          <svg width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="backdrop-modal">
+          <p class="modal-contacts-description">
+            Leave your contacts and we will call you back
+          </p>
+          <form class="form-contacts">
+            <div class="modal-form-wrapper">
+              <label
+                class="modal-form-field-label"
+                for="user-name"
+                >Name</label
+              ><input
+                class="modal-form-field"
+                type="text"
+                id="user-name"
+                name="user_name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
+                title="Iryna"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="18"
+              >
+                <use
+                  href="./images/icons.svg#icon-person"
+                ></use>
+              </svg>
+            </div>
+            <div class="modal-form-wrapper">
+              <label
+                class="modal-form-field-label"
+                for="user-phone"
+                >Phone</label
+              ><input
+                class="modal-form-field"
+                type="tel"
+                id="user-phone"
+                name="user_phone"
+                required
+                pattern="[0-9{3}-0-9{3-}0-9{2}-0-9{2}]+"
+                title="096-111-11-11"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="24"
+              >
+                <use
+                  href="./images/icons.svg#icon-phone"
+                ></use>
+              </svg>
+            </div>
+            <div class="modal-form-wrapper">
+              <label
+                class="modal-form-field-label"
+                for="user-email"
+                >Email</label
+              ><input
+                class="modal-form-field"
+                type="email"
+                name="user_email"
+                id="user-email"
+                required
+                title="test@gmail.com"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="24"
+              >
+                <use
+                  href="./images/icons.svg#icon-email"
+                ></use>
+              </svg>
+            </div>
+            <div>
+              <label
+                class="modal-form-field-label"
+                for="user-comment"
+                >Comment</label
+              >
+              <textarea
+                class="textarea-text"
+                name="user_comment"
+                id="user-comment"
+                cols="30"
+                rows="10"
+                placeholder="Text input"
+              ></textarea>
+            </div>
+            <div class="modal-form-checkbox-wrapper">
+              <input
+                class="modal-form-checkbox visually-hidden"
+                type="checkbox"
+                name="user_policy"
+                value="true"
+                id="user-policy"
+                required
+              />
+
+              <label
+                class="modal-form-checkbox-label"
+                for="user-policy"
+                ><span class="modal-form-own-checkbox"
+                  ><svg width="10" height="8">
+                    <use
+                      href="./images/icons.svg#icon-vector"
+                    ></use>
+                  </svg> </span
+                >I accept the terms and conditions of the
+                <a class="privacy-policy-link" href=""
+                  >Privacy Policy</a
+                >
+              </label>
+            </div>
+            <button
+              class="modal-form-send-button"
+              type="submit"
+            >
+              Send
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <!-- /Backdrop -->
   </body>
 </html>
