goit-markup-hw-05-var1

--- a/index.html
+++ b/index.html
@@ -694,18 +694,18 @@
             <label class="footer-form-label">
               <input
                 class="footer-input-form"
-                type="text"
+                type="email"
                 name="user_mail"
                 placeholder="E-mail"
               />
             </label>
             <button class="btn-footer-form" type="submit">
               Subscribe
-              <svg>
+              <svg class="footer-icon-send">
                 <use
                   href="./images/icons.svg#icon-icon-send"
                   width="24"
-                  height="20"
+                  height="24"
                   aria-label="send icon"
                 ></use>
               </svg>
