--- a/index.html
+++ b/index.html
@@ -701,11 +701,13 @@
             </label>
             <button class="btn-footer-form" type="submit">
               Subscribe
-              <svg class="footer-icon-send">
+              <svg
+                class="footer-icon-send"
+                width="24"
+                height="24"
+              >
                 <use
                   href="./images/icons.svg#icon-icon-send"
-                  width="24"
-                  height="24"
                   aria-label="send icon"
                 ></use>
               </svg>
