--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
               <input
                 class="footer-input-form"
                 type="email"
-                name="user_mail"
+                name="user-mail"
                 placeholder="E-mail"
               />
             </label>
