--- a/index.html
+++ b/index.html
@@ -722,7 +722,11 @@
     <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
-          <svg width="8" height="8">
+          <svg
+            class="backdrop-close-icon"
+            width="8"
+            height="8"
+          >
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
