--- a/index.html
+++ b/index.html
@@ -739,73 +739,82 @@
               class="modal-form-field-label"
               for="user-name"
               >Name</label
-            ><input
-              class="modal-form-field"
-              type="text"
-              id="user-name"
-              name="user_name"
-              required
-              pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
-              title="Iryna"
-            />
-            <svg
-              class="modal-form-icon"
-              width="18"
-              height="18"
             >
-              <use
-                href="./images/icons.svg#icon-person"
-              ></use>
-            </svg>
+            <div class="modal-form-field-text">
+              <input
+                class="modal-form-field"
+                type="text"
+                id="user-name"
+                name="user_name"
+                required
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
+                title="Iryna"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="24"
+              >
+                <use
+                  href="./images/icons.svg#icon-person"
+                ></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form-wrapper">
             <label
               class="modal-form-field-label"
               for="user-phone"
               >Phone</label
-            ><input
-              class="modal-form-field"
-              type="tel"
-              id="user-phone"
-              name="user_phone"
-              required
-              pattern="[0-9{3}-0-9{3-}0-9{2}-0-9{2}]+"
-              title="096-111-11-11"
-            />
-            <svg
-              class="modal-form-icon"
-              width="18"
-              height="24"
             >
-              <use
-                href="./images/icons.svg#icon-phone"
-              ></use>
-            </svg>
+            <div class="modal-form-field-text">
+              <input
+                class="modal-form-field"
+                type="tel"
+                id="user-phone"
+                name="user_phone"
+                required
+                pattern="[0-9{3}-0-9{3-}0-9{2}-0-9{2}]+"
+                title="096-111-11-11"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="24"
+              >
+                <use
+                  href="./images/icons.svg#icon-phone"
+                ></use>
+              </svg>
+            </div>
           </div>
           <div class="modal-form-wrapper">
             <label
               class="modal-form-field-label"
               for="user-email"
               >Email</label
-            ><input
-              class="modal-form-field"
-              type="email"
-              name="user_email"
-              id="user-email"
-              required
-              title="test@gmail.com"
-            />
-            <svg
-              class="modal-form-icon"
-              width="18"
-              height="24"
             >
-              <use
-                href="./images/icons.svg#icon-email"
-              ></use>
-            </svg>
+            <div class="modal-form-field-text">
+              <input
+                class="modal-form-field"
+                type="email"
+                name="user_email"
+                id="user-email"
+                required
+                title="test@gmail.com"
+              />
+              <svg
+                class="modal-form-icon"
+                width="18"
+                height="24"
+              >
+                <use
+                  href="./images/icons.svg#icon-email"
+                ></use>
+              </svg>
+            </div>
           </div>
-          <div>
+          <div class="modal-form-field-comment">
             <label
               class="modal-form-field-label"
               for="user-comment"
@@ -813,7 +822,7 @@
             >
             <textarea
               class="textarea-text"
-              name="user_comment"
+              name="user-comment"
               id="user-comment"
               cols="30"
               rows="10"
