--- a/index.html
+++ b/index.html
@@ -833,14 +833,14 @@
             <input
               class="modal-form-checkbox visually-hidden"
               type="checkbox"
-              name="user_policy"
+              name="user-privacy"
               value="true"
-              id="user-policy"
+              id="user-privacy"
               required
             />
             <label
               class="modal-form-checkbox-label"
-              for="user-policy"
+              for="user-privacy"
               ><span class="modal-form-own-checkbox"
                 ><svg width="10" height="8">
                   <use
