--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                 class="modal-form-field"
                 type="text"
                 id="user-name"
-                name="user_name"
+                name="user-name"
                 required
                 pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐйЙ']+"
                 title="Iryna"
